<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_time_table"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/nav_time_table" />
    </group>
    <group
        android:id="@+id/menu_middle"
        android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_symbols"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/nav_symbols" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none" >
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/nav_update" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/nav_info" />
    </group>

</menu>
